<resources>
    <string name="app_name">Manaus Mobi</string>
    <string name="piechart">Dados Indisponíveis</string>
    <string name="spn_type">Tipo de Dashboard</string>
    <string name="option">Tipo</string>
    <string name="sub_option">Local / Hora</string>
    <string name="transito">Trânsito</string>
    <string name="perigo">Perigo</string>
    <string name="local">Agrupamento</string>
    <string name="transitoPerigo">Trânsito e Perigo</string>
    <string name="transporte">Transporte</string>
    <string name="bi">Análise dos dados</string>
    <string name="habilitargps">Por favor, habilitar o GPS</string>
    <string name="solicitarSeguranca">Serviço de segurança solicitado com sucesso</string>
    <string name="solicitarSaude">Serviço de saúde solicitado com sucesso</string>
    <string name="parada">Parada de ônibus</string>
    <string name="gallery">Galeria de compartilhamento</string>
    <string name="erroDeConexao">Erro de conexão, tente novamente</string>
    <string name="serviceSecurity">Serviço de segurança solicitado com sucesso</string>
    <string name="serviceSecurityName">Serviço de segurança</string>
    <string name="serviceSafetyName">Serviço de saúde</string>
    <string name="serviceSafety">Serviço de saúde solicitado com sucesso</string>
    <string name="messageStorage">Libere espaço em seu dispositivo e depois volte ao Manaus Mobi</string>
    <string name="titleStorage">Memória Cheia</string>
    <string name="message">Mensagem</string>
    <string name="imagemCarregada">Imagem carregada com sucesso</string>
    <string name="limiteImagem">Você atingiu o limite de imagens"</string>
    <string name="informacaoEnviada">Sua informação foi enviada"</string>
    <string name="hora">Hora</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="quantidadeVeiculos">Quantidade de Veículos</string>
    <string name="lgd_traffic">Lugares mais engarrafados</string>
    <string name="lgd_warning">Lugares mais perigosos</string>
    <string name="lgd_bi_local">Regiões mais engarrafadas por hora</string>
    <string name="lgd_bi_hours">Horário mais engarrafado por região</string>
    <string name="moderado">Moderado</string>
    <string name="intenso">Intenso</string>
    <string name="parado">Parado</string>
    <string name="emRota">Em rota</string>
    <string name="acostamento">Acostamento</string>
    <string name="clima">Clima</string>
    <string name="camera">Camera</string>
    <string name="enviar">Enviar</string>
    <string name="chooseOpt">Escolha a sua Opção</string>
    <string name="title_activity_point_bus_detail">PointBusDetailActivity</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_shared_detail">SharedDetailActivity</string>
    <string name="intro_skip">Pular</string>
    <string name="intro_done">Começar</string>
</resources>
